[package]
name = "monte-carlo-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.2.1", features = ["derive"] }
ndarray = "0.15.6"
ndarray-stats = "0.5.1"
plotters = "0.3.4"
rand = "0.8.5"
rayon = "1.7.0"
statrs = "0.16.0"
